# sqeel

./: Cargo.toml  DONATE.md  LICENSE  PLAN.md  README.md  SQEEL.md  TODO.md
.github/actions/sync-hjkl/: action.yml
.github/workflows/: ci.yml  release.yml
sqeel/: Cargo.toml
sqeel-buffer/: Cargo.toml
sqeel-buffer/src/: buffer.rs  folds.rs  lib.rs  motion.rs  position.rs  render.rs  search.rs  span.rs  viewport.rs
sqeel-core/: Cargo.toml
sqeel-core/src/: completion_ctx.rs  config.rs  db.rs  ddl.rs  highlight.rs  lib.rs  lsp.rs  persistence.rs  schema.rs  state.rs
sqeel-gui/src/: lib.rs
sqeel-tui/: Cargo.toml
sqeel-tui/src/: clipboard.rs  completion_thread.rs  editor.rs  highlight_thread.rs  host.rs  lib.rs  theme.rs
sqeel-tui/src/editor/: ex.rs  mod.rs  vim.rs
sqeel-tui/themes/: tokyonight.toml
sqeel-vim/: Cargo.toml
sqeel-vim/src/: editor.rs  ex.rs  input.rs  lib.rs  registers.rs  render.rs  vim.rs
