[workspace]
members = ["sqeel-core", "sqeel-tui", "sqeel-gui", "sqeel"]
default-members = ["sqeel"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/sqeel"
homepage = "https://sqeel.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
