[package]
name = "sqeel-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hjkl-engine = "=0.0.28"
anyhow = "1"
dirs = "6.0.0"
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "macros", "sqlite", "postgres", "chrono", "bigdecimal", "uuid"] }
chrono = "0.4"
bigdecimal = "0.4"
uuid = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.1.2"
tree-sitter = "0.26.8"
tree-sitter-sequel = "0.3.11"
# Markdown parser for LSP hover payloads — sqls (and most servers)
# return rich markdown; pulldown-cmark gives us GFM tables + the event
# stream we use to build styled Lines in the TUI.
pulldown-cmark = { version = "0.11", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["full", "test-util"] }
