[package]
name = "sqeel-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
sqeel-core = { path = "../sqeel-core" }
hjkl-engine = "=0.0.26"
hjkl-editor = "=0.0.26"
hjkl-buffer = { version = "=0.0.26", features = ["ratatui"] }
anyhow = "1"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
regex = "1"
tokio = { version = "1.52.1", features = ["full"] }
lsp-types = "0.97.0"
arboard = { version = "3", features = ["wayland-data-control"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
pulldown-cmark = { version = "0.11", default-features = false }
unicode-width = "0.2"
