[package]
name = "sqeel"
description = "Vim-modal SQL client: TUI + GUI front-ends for sqlx-backed connections with LSP-aware editing."
keywords = ["sql", "vim", "tui", "gui", "client"]
categories = ["database", "command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
default-run = "sqeel"

[[bin]]
name = "sqeel"
path = "src/bin/sqeel.rs"

[[bin]]
name = "sqeel-gui"
path = "src/bin/sqeel-gui.rs"

[dependencies]
sqeel-core = { path = "../sqeel-core", version = "=0.1.1" }
sqeel-tui = { path = "../sqeel-tui", version = "=0.1.1" }
sqeel-gui = { path = "../sqeel-gui", version = "=0.1.1" }
anyhow = "1"
eframe = "0.31"
egui = "0.31"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
tempfile = "3.27.0"
